add adaptive for review

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <main class="main">
     <div class="swiper-overflow-container">
         <div class="container-main">
-            <div class="mb-64">
+            <div class="mb-64 hero">
                 <h1 class="title mb-32">KING.ANSWER — твой помощник в решении домашнего задания! Решаем тесты за вас уже
                     <span class="color-purple">более 2 лет</span></h1>
                 <button class="filled-button">Получить ответы</button>
@@ -85,29 +85,29 @@
                         <a class="card__link outline-link" href="/">Сайт учителя Захарьиной</a>
                     </div>
                 </div>
-                <div class="swiper swiper-container slider-advantages cards--tablet">
+                <div class="swiper swiper-container slider-advantages cards--tablet mb-32">
                     <div class="swiper-wrapper">
-                        <div class="card swiper-slide">
+                        <div class="card advantages__item swiper-slide ">
                             <img class="card__img" src="images/heart.png" alt="">
                             <p class="card__text">Поддержка более 5 платформ</p>
                         </div>
-                        <div class="card swiper-slide">
+                        <div class="card advantages__item swiper-slide">
                             <img class="card__img" src="images/like.png" alt="">
                             <p class="card__text">Только правильные ответы</p>
                         </div>
-                        <div class="card swiper-slide">
+                        <div class="card advantages__item swiper-slide">
                             <img class="card__img" src="images/calendar.png" alt="">
                             <p class="card__text">Бот работает круглосуточно</p>
                         </div>
-                        <div class="card swiper-slide">
+                        <div class="card advantages__item swiper-slide">
                             <img class="card__img" src="images/lightning.png" alt="">
                             <p class="card__text">Работа в автоматическом режиме</p>
                         </div>
-                        <div class="card swiper-slide">
+                        <div class="card advantages__item swiper-slide">
                             <img class="card__img" src="images/hashtag.png" alt="">
                             <p class="card__text">Техническая поддержка 24/7</p>
                         </div>
-                        <div class="card swiper-slide">
+                        <div class="card advantages__item swiper-slide">
                             <img class="card__img" src="images/coffee.png" alt="">
                             <p class="card__text">Высокая стабильность</p>
                         </div>
@@ -115,27 +115,27 @@
                 </div>
                 <div class="swiper swiper-container slider-advantages-clients cards--tablet">
                     <div class="swiper-wrapper">
-                        <div class="card swiper-slide">
+                        <div class="card advantages__item swiper-slide">
                             <p class="card__title">МЭШ</p>
                             <a class="card__link outline-link" href="/">Московская электронная школа</a>
                         </div>
-                        <div class="card swiper-slide">
+                        <div class="card advantages__item swiper-slide">
                             <p class="card__title">РЭШ</p>
                             <a class="card__link outline-link" href="/">Российская электронная школа</a>
                         </div>
-                        <div class="card swiper-slide">
+                        <div class="card advantages__item swiper-slide">
                             <p class="card__title">Skysmart</p>
                             <a class="card__link outline-link" href="/">Онлайн-школа</a>
                         </div>
-                        <div class="card swiper-slide">
+                        <div class="card advantages__item swiper-slide">
                             <p class="card__title">Foxford</p>
                             <a class="card__link outline-link" href="/">Онлайн-школа Foxford</a>
                         </div>
-                        <div class="card swiper-slide">
+                        <div class="card advantages__item swiper-slide">
                             <p class="card__title">Яндекс учебник</p>
                             <a class="card__link outline-link" href="/">Образовательная платформа</a>
                         </div>
-                        <div class="card swiper-slide">
+                        <div class="card advantages__item swiper-slide">
                             <p class="card__title">Saharina.ru</p>
                             <a class="card__link outline-link" href="/">Сайт учителя Захарьиной</a>
                         </div>
@@ -146,7 +146,7 @@
                 <h2 class="title-block mb-32">
                     Отзывы
                 </h2>
-                <div class="cards d-f jc-sb">
+                <div class="cards reviews__cards d-f jc-sb">
                     <div class="card review">
                         <div class="card__header d-f jc-sb mb-12">
                             <p class="card__name">Марина</p>
