add adaptive for mobile

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <div class="mb-64 hero">
                 <h1 class="title mb-32">KING.ANSWER — твой помощник в решении домашнего задания! Решаем тесты за вас уже
                     <span class="color-purple">более 2 лет</span></h1>
-                <button class="filled-button">Получить ответы</button>
+                <button class="filled-button hero__answer-button">Получить ответы</button>
             </div>
             <div class="why-are-we mb-64">
                 <h2 class="title-block mb-32">
@@ -146,7 +146,7 @@
                 <h2 class="title-block mb-32">
                     Отзывы
                 </h2>
-                <div class="cards reviews__cards d-f jc-sb">
+                <div class="cards review--desktop reviews__cards d-f jc-sb">
                     <div class="card review">
                         <div class="card__header d-f jc-sb mb-12">
                             <p class="card__name">Марина</p>
@@ -170,6 +170,34 @@
                         </div>
                         <p class="card__text ta-s">Отличный бот, огромное спасибо создателю. Не верила, что возможно
                             будет ответы быстро находить и придется часами решать эти цдз.</p>
+                    </div>
+                </div>
+                <div class="swiper swiper-container slider-reviews cards--mobile reviews__cards">
+                    <div class="swiper-wrapper">
+                        <div class="card review swiper-slide">
+                            <div class="card__header d-f jc-sb mb-12">
+                                <p class="card__name">Марина</p>
+                                <img src="icons/quotes.svg" alt=""/>
+                            </div>
+                            <p class="card__text ta-s">Отличный бот, огромное спасибо создателю. Не верила, что возможно
+                                будет ответы быстро находить и придется часами решать эти цдз.</p>
+                        </div>
+                        <div class="card review swiper-slide">
+                            <div class="card__header d-f jc-sb mb-12">
+                                <p class="card__name">Марина</p>
+                                <img src="icons/quotes.svg" alt=""/>
+                            </div>
+                            <p class="card__text ta-s">Отличный бот, огромное спасибо создателю. Не верила, что возможно
+                                будет ответы быстро находить и придется часами решать эти цдз.</p>
+                        </div>
+                        <div class="card review swiper-slide">
+                            <div class="card__header d-f jc-sb mb-12">
+                                <p class="card__name">Марина</p>
+                                <img src="icons/quotes.svg" alt=""/>
+                            </div>
+                            <p class="card__text ta-s">Отличный бот, огромное спасибо создателю. Не верила, что возможно
+                                будет ответы быстро находить и придется часами решать эти цдз.</p>
+                        </div>
                     </div>
                 </div>
             </div>
