fix imports and add href

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="./styles/reset.css">
-    <link rel="stylesheet" href="./styles/fonts.css">
-    <link rel="stylesheet" href="./styles/main.css">
+    <link rel="stylesheet" href="styles/reset.css">
+    <link rel="stylesheet" href="styles/fonts.css">
+    <link rel="stylesheet" href="styles/main.css">
     <title>King</title>
 </head>
 <body>
@@ -18,7 +18,7 @@
                 <img src="icons/logo.svg" alt=""/>
             </a>
         </div>
-        <a class="support-link outline-link">Техническая поддержка</a>
+        <a href="/" class="support-link outline-link">Техническая поддержка</a>
     </div>
 </header>
 <main class="main">
@@ -27,7 +27,7 @@
             <div class="mb-64 hero">
                 <h1 class="title mb-32">KING.ANSWER — твой помощник в решении домашнего задания! Решаем тесты за вас уже
                     <span class="color-purple">более 2 лет</span></h1>
-                <button class="filled-button hero__answer-button">Получить ответы</button>
+                <a href="/" class="filled-button hero__answer-button">Получить ответы</a>
             </div>
             <div class="why-are-we mb-64">
                 <h2 class="title-block mb-32">
