--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <div class="mb-64 hero">
                 <h1 class="title mb-32">KING.ANSWER — твой помощник в решении домашнего задания! Решаем тесты за вас уже
                     <span class="color-purple">более 2 лет</span></h1>
-                <a href="/" class="filled-button hero__answer-button">Получить ответы</a>
+                <a href="/ticket.html" class="filled-button hero__answer-button">Получить ответы</a>
             </div>
             <div class="why-are-we mb-64">
                 <h2 class="title-block mb-32">
