--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <img src="icons/logo.svg" alt=""/>
             </a>
         </div>
-        <a href="https://t.me/king_answer_support" class="support-link outline-link">Техническая поддержка</a>
+        <a href="https://t.me/king_answer_support" target="_blank" class="support-link outline-link">Техническая поддержка</a>
     </div>
 </header>
 <main class="main">
@@ -206,23 +206,23 @@
                     Мы в ответе за ваши оценки!
                 </h2>
                 <div class="social-networks__items">
-                    <a class="social-networks__item d-f" href="https://t.me/kingmash_official">
+                    <a class="social-networks__item d-f" target="_blank" href="https://t.me/kingmash_official">
                         <img class="mr-24" src="icons/crown-purple.svg" alt="">
                         <p class="social-networks__item-text">Telegram канал</p>
                     </a>
-                    <a class="social-networks__item d-f" href="https://t.me/kingmash_bot">
+                    <a class="social-networks__item d-f" target="_blank" href="https://t.me/kingmash_bot">
                         <img class="mr-24" src="icons/crown-purple.svg" alt="">
                         <p class="social-networks__item-text">БОТ</p>
                     </a>
-                    <a class="social-networks__item d-f" href="https://vk.com/mashbot">
+                    <a class="social-networks__item d-f" target="_blank" href="https://vk.com/mashbot">
                         <img class="mr-24" src="icons/crown-blue.svg" alt="">
                         <p class="social-networks__item-text">Группа в VK</p>
                     </a>
-                    <a class="social-networks__item d-f" href="https://t.me/kingchat_official">
+                    <a class="social-networks__item d-f" target="_blank" href="https://t.me/kingchat_official">
                         <img class="mr-24" src="icons/crown-green.svg" alt="">
                         <p class="social-networks__item-text">Чат в Telegram</p>
                     </a>
-                    <a class="social-networks__item d-f" href="https://t.me/premium_kingmash_bot">
+                    <a class="social-networks__item d-f" target="_blank" href="https://t.me/premium_kingmash_bot">
                         <img class="mr-24" src="icons/crown-yellow.svg" alt="">
                         <p class="social-networks__item-text">Premium БОТ</p>
                     </a>
