--- a/ticket.html
+++ b/ticket.html
@@ -18,14 +18,14 @@
                     <img src="icons/logo.svg" alt=""/>
                 </a>
             </div>
-            <a href="https://t.me/king_answer_support" class="support-link outline-link">Техническая поддержка</a>
+            <a href="https://t.me/king_answer_support" target="_blank" class="support-link outline-link">Техническая поддержка</a>
         </div>
     </header>
     <main class="main">
         <div class="container-main">
             <div class="query-entry mb-64">
                 <label>
-                    <input class="question__input" type="text" placeholder="Введите запрос">
+                    <input class="question__input" id="questionInput" type="text" placeholder="Введите запрос">
                 </label>
             </div>
             <div class="answers mb-64">
@@ -53,23 +53,23 @@
                     Мы в ответе за ваши оценки!
                 </h2>
                 <div class="social-networks__items">
-                    <a class="social-networks__item d-f" href="https://t.me/kingmash_official">
+                    <a class="social-networks__item d-f" target="_blank" href="https://t.me/kingmash_official">
                         <img class="mr-24" src="icons/crown-purple.svg" alt="">
                         <p class="social-networks__item-text">Telegram канал</p>
                     </a>
-                    <a class="social-networks__item d-f" href="https://t.me/kingmash_bot">
+                    <a class="social-networks__item d-f" target="_blank" href="https://t.me/kingmash_bot">
                         <img class="mr-24" src="icons/crown-purple.svg" alt="">
                         <p class="social-networks__item-text">БОТ</p>
                     </a>
-                    <a class="social-networks__item d-f" href="https://vk.com/mashbot">
+                    <a class="social-networks__item d-f" target="_blank" href="https://vk.com/mashbot">
                         <img class="mr-24" src="icons/crown-blue.svg" alt="">
                         <p class="social-networks__item-text">Группа в VK</p>
                     </a>
-                    <a class="social-networks__item d-f" href="https://t.me/kingchat_official">
+                    <a class="social-networks__item d-f" target="_blank" href="https://t.me/kingchat_official">
                         <img class="mr-24" src="icons/crown-green.svg" alt="">
                         <p class="social-networks__item-text">Чат в Telegram</p>
                     </a>
-                    <a class="social-networks__item d-f" href="https://t.me/premium_kingmash_bot">
+                    <a class="social-networks__item d-f" target="_blank" href="https://t.me/premium_kingmash_bot">
                         <img class="mr-24" src="icons/crown-yellow.svg" alt="">
                         <p class="social-networks__item-text">Premium БОТ</p>
                     </a>
@@ -78,5 +78,6 @@
         </div>
     </main>
     <script type="module" src="scripts/imageViewer.js"></script>
+    <script type="module" src="scripts/search.js"></script>
 </body>
 </html>
